--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Ajinkya Phadatare</h1>
-    <img src="../cat.png" width="100" alt="my photo"/>
+    <img src="./cat.png" width="100" alt="my photo"/>
     <h3>Summery</h3>
     <p>
         A highly motivated and detail-oriented Software Developer with a strong foundation in web development, backend systems, and API integrations. Skilled in designing and developing efficient, scalable, and user-friendly applications. Passionate about problem-solving and continuously learning new technologies to enhance software solutions. Experienced in collaborating with teams to deliver high-quality projects within deadlines.
